--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,34 @@
 -i https://pypi.org/simple
-certifi==2019.9.11
-chardet==3.0.4
-click==7.0
-flask==1.0.2
-future==0.18.1
-idna==2.8
-itsdangerous==1.1.0
-jinja2==2.10.3
+caiohttp==3.8.1
+aiosignal==1.2.0
+async-timeout==4.0.2
+attrs==21.3.0
+beautifulsoup4==4.10.0
+bs4==0.0.1
+certifi==2021.10.8
+charset-normalizer==2.0.9
+click==8.0.3
+colorama==0.4.4
+Flask==1.0.2
+frozenlist==1.2.0
+future==0.18.2
+idna==3.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
 line-bot-sdk==1.14.0
-markupsafe==1.1.1
+MarkupSafe==2.0.1
+multidict==5.2.0
+nba-api==1.1.11
+numpy==1.21.5
+pandas==1.3.5
+python-dateutil==2.8.2
 pygraphviz==1.5
 python-dotenv==0.10.3
-requests==2.22.0
-six==1.12.0
+pytz==2021.3
+requests==2.26.0
+six==1.16.0
+soupsieve==2.3.1
 transitions==0.6.9
-urllib3==1.25.6
-werkzeug==0.16.0
+urllib3==1.26.7
+Werkzeug==2.0.2
+yarl==1.7.2
