--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
--i https://pypi.org/simple
-caiohttp==3.8.1
+aiohttp==3.8.1
 aiosignal==1.2.0
 async-timeout==4.0.2
 attrs==21.3.0
@@ -9,27 +8,35 @@ certifi==2021.10.8
 charset-normalizer==2.0.9
 click==8.0.3
 colorama==0.4.4
-Flask==1.0.2
+Deprecated==1.2.13
+Flask==2.0.2
 frozenlist==1.2.0
 future==0.18.2
+graphviz==0.19.1
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
-line-bot-sdk==1.14.0
+line-bot-sdk==2.0.1
 MarkupSafe==2.0.1
 multidict==5.2.0
 nba-api==1.1.11
+ngrok==0.0.1
 numpy==1.21.5
+packaging==21.3
 pandas==1.3.5
-python-dateutil==2.8.2
 pygraphviz==1.5
-python-dotenv==0.10.3
+pyparsing==3.0.6
+python-dateutil==2.8.2
+python-dotenv==0.19.2
 pytz==2021.3
+redis==4.1.0
 requests==2.26.0
 rq==1.10.1
 six==1.16.0
 soupsieve==2.3.1
-transitions==0.6.9
+transitions==0.8.10
 urllib3==1.26.7
 Werkzeug==2.0.2
+wincertstore==0.2
+wrapt==1.13.3
 yarl==1.7.2
